# dot_path_rs

./: Cargo.toml  README.md
src/: lib.rs
